crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_type_refs.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"Array<T>\")"
---
TypeAnn {
    kind: TypeRef(
        "Array",
        Some(
            [
                TypeAnn {
                    kind: TypeRef(
                        "T",
                        None,
                    ),
                    span: 6..7,
                    inferred_type: None,
                },
            ],
        ),
    ),
    span: 0..8,
    inferred_type: None,
}
