crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_union_types-2.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"number | string | boolean\")"
---
TypeAnn {
    kind: Union(
        [
            TypeAnn {
                kind: Number,
                span: 0..6,
                inferred_type: None,
            },
            TypeAnn {
                kind: String,
                span: 9..15,
                inferred_type: None,
            },
            TypeAnn {
                kind: Boolean,
                span: 18..25,
                inferred_type: None,
            },
        ],
    ),
    span: 0..25,
    inferred_type: None,
}
