crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_wildcard_type.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"Array<_>\")"
---
TypeAnn {
    kind: TypeRef(
        "Array",
        Some(
            [
                TypeAnn {
                    kind: Wildcard,
                    span: 6..7,
                    inferred_type: None,
                },
            ],
        ),
    ),
    span: 0..8,
    inferred_type: None,
}
